# crimsonskies

./: .gitignore  CMakeLists.txt  README.md  run_pipeline.py
analysis/: iat_imports.json
config/: functions.json  manual_functions.json  missed_virtuals.functions.json  pe_analysis.json
docs/: IDA_ANALYSIS_HANDOFF.md  PLAN.md
src/game/: com_mocks.c  imports.c  imports_gen.inc  main.c  va_holder.def
src/recomp/: recomp_types.h
src/va_holder/: va_holder.c
tools/: fix_gen.py  gen_imports.py  gen_va_holder.py
